Fix image alignment.

--- a/style.css
+++ b/style.css
@@ -973,9 +973,8 @@ a:-webkit-any-link:hover {
 
 .elcapisimo-post-entry-content {
 	width: 65%;
-	display: flex;
 	justify-content: right;
-	word-wrap: break-word;;
+	word-wrap: break-word;
 }
 
 .posted-on {
@@ -1035,10 +1034,7 @@ a:-webkit-any-link:hover {
 	margin-bottom: 0;
 }
 
-.entry-content {
-	margin: 0;
-	word-break: break-all
-}
+
 /*--------------------------------------------------------------
 ## Comments
 --------------------------------------------------------------*/
